# core

./: .gitignore  Cargo.toml  README.md  dockerfile  flake.nix
.github/doc/: dockersupport.md
backend/: Cargo.toml
backend/src/: main.rs  routes.rs
src/: docker.rs  handlers.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: images.rs  instance.rs  mod.rs  players.rs  status.rs  types.rs
src/common/: errors.rs  types.rs
src/db/: models.rs  queries.rs  schema.rs
src/server/: mod.rs
src/server/handlers/: instance.rs  mod.rs  players.rs  types.rs
src/server/handlers/actions/: mod.rs
src/server/services/: docker.rs
