[package]
name = "amethyst-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = "0.12.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shiplift = "0.7.0"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tower_governor = "0.4.2"
