[package]
name = "amethyst"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.4", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
bollard = "0.16.1"
futures = "0.3.30"
futures-util = "0.3.30"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }
# tower_governor = "0.4.2"
rand = "0.8"
thiserror = "1.0.61"
indicatif = "0.17.8"
regex = "1.10.5"

[dev-dependencies]
anyhow = "1"
